--- a/Clinica/pom.xml
+++ b/Clinica/pom.xml
@@ -52,6 +52,16 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.4.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.fasterxml.jackson.core</groupId>-->
+<!--			<artifactId>jackson-databind</artifactId>-->
+<!--			<version>2.9.9</version>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
